force-app/main/default/objects/Print_Job__c/Print_Job__c.object-meta.xml
<CustomObject>
    <description>A booklet personalisation/printing run for an application.</description>
    <label>Print Job</label>
    <nameField>
        <displayFormat>PRN-{00000}</displayFormat>
        <label>Print Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Print Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>