force-app/main/default/objects/Print_Job__c/fields/Attempt_Number__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Attempt Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>