force-app/main/default/objects/Print_Job__c/fields/Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number__c</fullName>
    <label>Batch Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>