force-app/main/default/objects/Print_Job__c/fields/Passport__c.field-meta.xml
<CustomField>
    <fullName>Passport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passport</label>
    <referenceTo>Passport__c</referenceTo>
    <relationshipLabel>Print Jobs</relationshipLabel>
    <relationshipName>Print_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>