force-app/main/default/objects/Print_Job__c/fields/Printed_Date__c.field-meta.xml
<CustomField>
    <fullName>Printed_Date__c</fullName>
    <label>Printed Date</label>
    <type>DateTime</type>
</CustomField>