force-app/main/default/objects/Print_Job__c/fields/Queued_Date__c.field-meta.xml
<CustomField>
    <fullName>Queued_Date__c</fullName>
    <label>Queued Date</label>
    <type>DateTime</type>
</CustomField>