force-app/main/default/objects/Print_Job__c/fields/Reprint_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reprint_Reason__c</fullName>
    <label>Reprint Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Print Defect</fullName>
            </value>
            <value>
                <fullName>Data Error</fullName>
            </value>
            <value>
                <fullName>Booklet Damage</fullName>
            </value>
            <value>
                <fullName>Lamination Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>