force-app/main/default/objects/Print_Job__c/fields/Turnaround_Hours__c.field-meta.xml
<CustomField>
    <fullName>Turnaround_Hours__c</fullName>
    <formula>IF(OR(ISBLANK(Queued_Date__c), ISBLANK(Printed_Date__c)), 0, (Printed_Date__c - Queued_Date__c) * 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turnaround Hours</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>