force-app/main/default/objects/Print_Job__c/validationRules/Failed_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Failed_Requires_Reason</fullName>
    <active>true</active>
    <description>A failed booklet consumes stock and triggers a reprint; the cause must be captured.</description>
    <errorConditionFormula>AND( ISPICKVAL(Status__c, &quot;Failed&quot;), ISBLANK(Failure_Reason__c) )</errorConditionFormula>
    <errorDisplayField>Failure_Reason__c</errorDisplayField>
    <errorMessage>Enter a Failure Reason when marking the print job as Failed.</errorMessage>
</ValidationRule>