force-app/main/default/objects/Print_Job__c/validationRules/Printed_Requires_Quality_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Printed_Requires_Quality_Check</fullName>
    <active>true</active>
    <description>Printed is the terminal success state and releases the booklet to dispatch; QC must have passed first.</description>
    <errorConditionFormula>AND( ISPICKVAL(Status__c, &quot;Printed&quot;), NOT(Quality_Check_Passed__c) )</errorConditionFormula>
    <errorDisplayField>Quality_Check_Passed__c</errorDisplayField>
    <errorMessage>A print job cannot be marked Printed until Quality Check Passed is checked. Use Quality Check status while the booklet is being inspected.</errorMessage>
</ValidationRule>