force-app/main/default/objects/Print_Job__c/validationRules/Reprint_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Reprint_Requires_Reason</fullName>
    <active>true</active>
    <description>Reprint reasons drive the print-facility defect reporting, so the picklist must be set whenever a reprint is raised.</description>
    <errorConditionFormula>AND( ISPICKVAL(Status__c, &quot;Reprint Required&quot;), ISBLANK(TEXT(Reprint_Reason__c)) )</errorConditionFormula>
    <errorDisplayField>Reprint_Reason__c</errorDisplayField>
    <errorMessage>Select a Reprint Reason when setting the status to Reprint Required.</errorMessage>
</ValidationRule>